@@ -1,3 +1,6 @@
+27 August 2009: Wouter
+	- autotrust: mesh answer callback is empty.
+
 26 August 2009: Wouter
 	- autotrust probing.
 	- iana portlist updated.
